# VM_5

./: CMakeLists.txt  CPU.cpp  CPU.h  Commands.h  HeadersExtensions.h  Memory.cpp  Memory.h  PSW.cpp  PSW.h  README.md  Types.h  VM_5.cpp
Assembly/: Assembly.cpp  Assembly.h  AssemblyTypes.h
Automats/: FloatParser.cpp  FloatParser.h  IntegerParser.cpp  IntegerParser.h
Loaders/: LoaderBinFile.cpp  LoaderBinFile.h  LoaderFromText.cpp  LoaderFromText.h
Parsers/: IndirectParser.cpp  IndirectParser.h  MathParser.cpp  MathParser.h
commands/: Bit_Operations.cpp  Bit_Operations.h  Compare.cpp  Compare.h  FMath.cpp  FMath.h  IMath.cpp  IMath.h  IO.cpp  IO.h  Jump.cpp  Jump.h  MOV.cpp  MOV.h
